[package]
name = "t"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "1.2.0", features = ["server", "http1"] }
bytes = "1.6.0"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
http-body-util = "0.1.1"
hyper-util = { version = "0.1", features = ["full"] }
pretty_env_logger = "0.5.0"
form_urlencoded = "1.2.1"
